--- a/spec/fixtures/vcr_cassettes/TriannonClientDELETE/_delete_annotation/without_authentication/behaves_like_delete_annotations/returns_TRUE_when_deleting_an_annotation_that_exists.yml
+++ b/spec/fixtures/vcr_cassettes/TriannonClientDELETE/_delete_annotation/without_authentication/behaves_like_delete_annotations/returns_TRUE_when_deleting_an_annotation_that_exists.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: delete
-    uri: http://localhost:3000/annotations/foo/%2F6c%2Fe1%2Fd5%2F8e%2F6ce1d58e-1bd6-4ac1-9edd-371db83b6b8a
+    uri: http://localhost:3000/annotations/foo/%2F95%2F3d%2F87%2F42%2F953d8742-6b0d-464f-b2d2-3cafb5286aad
     body:
       encoding: US-ASCII
       string: ''
@@ -31,13 +31,13 @@ http_interactions:
       Cache-Control:
       - no-cache
       X-Request-Id:
-      - 3b6bfc4d-9216-46f4-a3da-46f4615745e2
+      - 089b8f00-53f7-4d26-ab74-09474593c260
       X-Runtime:
-      - '0.015254'
+      - '0.020184'
       Server:
       - WEBrick/1.3.1 (Ruby/2.2.2/2015-04-13)
       Date:
-      - Fri, 31 Jul 2015 20:47:26 GMT
+      - Fri, 31 Jul 2015 23:57:52 GMT
       Content-Length:
       - '1519'
       Connection:
@@ -46,10 +46,10 @@ http_interactions:
       - request_method=DELETE; path=/
     body:
       encoding: UTF-8
-      string: "<h2>error getting foo//6c/e1/d5/8e/6ce1d58e-1bd6-4ac1-9edd-371db83b6b8a
+      string: "<h2>error getting foo//95/3d/87/42/953d8742-6b0d-464f-b2d2-3cafb5286aad
         from LDP</h2><html>\n<head>\n<meta http-equiv=\"Content-Type\" content=\"text/html;
         charset=ISO-8859-1\"/>\n<title>Error 404 Not Found</title>\n</head>\n<body><h2>HTTP
-        ERROR 404</h2>\n<p>Problem accessing /fedora/rest/anno/foo/6c/e1/d5/8e/6ce1d58e-1bd6-4ac1-9edd-371db83b6b8a.
+        ERROR 404</h2>\n<p>Problem accessing /fedora/rest/anno/foo/95/3d/87/42/953d8742-6b0d-464f-b2d2-3cafb5286aad.
         Reason:\n<pre>    Not Found</pre></p><hr /><i><small>Powered by Jetty://</small></i><br/>
         \                                               \n<br/>                                                \n<br/>
         \                                               \n<br/>                                                \n<br/>
@@ -62,10 +62,10 @@ http_interactions:
         \                                               \n<br/>                                                \n<br/>
         \                                               \n<br/>                                                \n\n</body>\n</html>\n"
     http_version: 
-  recorded_at: Fri, 31 Jul 2015 20:47:26 GMT
+  recorded_at: Fri, 31 Jul 2015 23:57:52 GMT
 - request:
     method: get
-    uri: http://localhost:3000/annotations/foo/%2F6c%2Fe1%2Fd5%2F8e%2F6ce1d58e-1bd6-4ac1-9edd-371db83b6b8a
+    uri: http://localhost:3000/annotations/foo/%2F95%2F3d%2F87%2F42%2F953d8742-6b0d-464f-b2d2-3cafb5286aad
     body:
       encoding: US-ASCII
       string: ''
@@ -94,23 +94,23 @@ http_interactions:
       Cache-Control:
       - no-cache
       X-Request-Id:
-      - d49dc71d-b053-43b4-89a0-040fc1d8c583
+      - 89012c11-9738-4c5a-9276-b86a7850779e
       X-Runtime:
-      - '0.017579'
+      - '0.015756'
       Server:
       - WEBrick/1.3.1 (Ruby/2.2.2/2015-04-13)
       Date:
-      - Fri, 31 Jul 2015 20:47:26 GMT
+      - Fri, 31 Jul 2015 23:57:52 GMT
       Content-Length:
       - '1519'
       Connection:
       - Keep-Alive
     body:
       encoding: UTF-8
-      string: "<h2>error getting foo//6c/e1/d5/8e/6ce1d58e-1bd6-4ac1-9edd-371db83b6b8a
+      string: "<h2>error getting foo//95/3d/87/42/953d8742-6b0d-464f-b2d2-3cafb5286aad
         from LDP</h2><html>\n<head>\n<meta http-equiv=\"Content-Type\" content=\"text/html;
         charset=ISO-8859-1\"/>\n<title>Error 404 Not Found</title>\n</head>\n<body><h2>HTTP
-        ERROR 404</h2>\n<p>Problem accessing /fedora/rest/anno/foo/6c/e1/d5/8e/6ce1d58e-1bd6-4ac1-9edd-371db83b6b8a.
+        ERROR 404</h2>\n<p>Problem accessing /fedora/rest/anno/foo/95/3d/87/42/953d8742-6b0d-464f-b2d2-3cafb5286aad.
         Reason:\n<pre>    Not Found</pre></p><hr /><i><small>Powered by Jetty://</small></i><br/>
         \                                               \n<br/>                                                \n<br/>
         \                                               \n<br/>                                                \n<br/>
@@ -123,5 +123,5 @@ http_interactions:
         \                                               \n<br/>                                                \n<br/>
         \                                               \n<br/>                                                \n\n</body>\n</html>\n"
     http_version: 
-  recorded_at: Fri, 31 Jul 2015 20:47:26 GMT
+  recorded_at: Fri, 31 Jul 2015 23:57:52 GMT
 recorded_with: VCR 2.9.3
