--- a/spec/fixtures/vcr_cassettes/TriannonClientREAD/GET/_get_iiif_annotation/returns_an_RDF_Graph_of_an_open_annotation.yml
+++ b/spec/fixtures/vcr_cassettes/TriannonClientREAD/GET/_get_iiif_annotation/returns_an_RDF_Graph_of_an_open_annotation.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http://localhost:3000/annotations/bar/%2F72%2F72%2F7b%2F30%2F72727b30-91eb-4eef-b936-97dc05cb5893
+    uri: http://localhost:3000/annotations/bar/%2F48%2F84%2F25%2F42%2F48842542-1dec-404f-8381-aac4dbf8f3e1
     body:
       encoding: US-ASCII
       string: ''
@@ -29,27 +29,27 @@ http_interactions:
       Content-Type:
       - application/ld+json; charset=utf-8
       Etag:
-      - W/"44aa16afbd6857e00b396b8f7296abcc"
+      - W/"c97b21a8045c9a865b3dc98262a0c848"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - ece0b0a4-b5a0-4805-af9c-a560f8c701ac
+      - 989c9235-713e-4583-bfb6-eec199ef9e34
       X-Runtime:
-      - '0.831822'
+      - '0.886770'
       Server:
       - WEBrick/1.3.1 (Ruby/2.2.2/2015-04-13)
       Date:
-      - Fri, 31 Jul 2015 20:47:54 GMT
+      - Fri, 31 Jul 2015 23:58:20 GMT
       Content-Length:
       - '447'
       Connection:
       - Keep-Alive
     body:
       encoding: UTF-8
-      string: '{"@context":"http://www.w3.org/ns/oa-context-20130208.json","@graph":[{"@id":"_:g70067816955280","@type":["dctypes:Text","cnt:ContentAsText"],"chars":"I
-        love this!","format":"text/plain","language":"en"},{"@id":"http://your.triannon-server.com/annotations/bar/72/72/7b/30/72727b30-91eb-4eef-b936-97dc05cb5893","@type":"oa:Annotation","hasBody":"_:g70067816955280","hasTarget":"http://purl.stanford.edu/kq131cs7229","motivatedBy":"oa:commenting"}]}'
+      string: '{"@context":"http://www.w3.org/ns/oa-context-20130208.json","@graph":[{"@id":"_:g69960155721280","@type":["dctypes:Text","cnt:ContentAsText"],"chars":"I
+        love this!","format":"text/plain","language":"en"},{"@id":"http://your.triannon-server.com/annotations/bar/48/84/25/42/48842542-1dec-404f-8381-aac4dbf8f3e1","@type":"oa:Annotation","hasBody":"_:g69960155721280","hasTarget":"http://purl.stanford.edu/kq131cs7229","motivatedBy":"oa:commenting"}]}'
     http_version: 
-  recorded_at: Fri, 31 Jul 2015 20:47:54 GMT
+  recorded_at: Fri, 31 Jul 2015 23:58:20 GMT
 - request:
     method: get
     uri: http://www.w3.org/ns/oa-context-20130208.json
@@ -69,7 +69,7 @@ http_interactions:
       message: Temporary Redirect
     headers:
       Date:
-      - Fri, 31 Jul 2015 20:47:54 GMT
+      - Fri, 31 Jul 2015 23:58:20 GMT
       Server:
       - Apache/2
       Location:
@@ -77,7 +77,7 @@ http_interactions:
       Cache-Control:
       - max-age=21600
       Expires:
-      - Sat, 01 Aug 2015 02:47:54 GMT
+      - Sat, 01 Aug 2015 05:58:20 GMT
       Content-Length:
       - '240'
       Content-Type:
@@ -93,7 +93,7 @@ http_interactions:
         <p>The document has moved <a href="http://www.w3.org/ns/oa.jsonld">here</a>.</p>
         </body></html>
     http_version: 
-  recorded_at: Fri, 31 Jul 2015 20:47:54 GMT
+  recorded_at: Fri, 31 Jul 2015 23:58:20 GMT
 - request:
     method: get
     uri: http://www.w3.org/ns/oa.jsonld
@@ -115,7 +115,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Fri, 31 Jul 2015 20:47:54 GMT
+      - Fri, 31 Jul 2015 23:58:20 GMT
       Server:
       - Apache/2
       Last-Modified:
@@ -129,7 +129,7 @@ http_interactions:
       Cache-Control:
       - max-age=21600
       Expires:
-      - Sat, 01 Aug 2015 02:47:54 GMT
+      - Sat, 01 Aug 2015 05:58:20 GMT
       P3p:
       - policyref="http://www.w3.org/2014/08/p3p.xml"
       Access-Control-Allow-Origin:
@@ -1247,7 +1247,7 @@ http_interactions:
 
 
     http_version: 
-  recorded_at: Fri, 31 Jul 2015 20:47:55 GMT
+  recorded_at: Fri, 31 Jul 2015 23:58:20 GMT
 - request:
     method: get
     uri: http://www.w3.org/ns/oa-context-20130208.json
@@ -1267,7 +1267,7 @@ http_interactions:
       message: Temporary Redirect
     headers:
       Date:
-      - Fri, 31 Jul 2015 20:47:55 GMT
+      - Fri, 31 Jul 2015 23:58:21 GMT
       Server:
       - Apache/2
       Location:
@@ -1275,7 +1275,7 @@ http_interactions:
       Cache-Control:
       - max-age=21600
       Expires:
-      - Sat, 01 Aug 2015 02:47:55 GMT
+      - Sat, 01 Aug 2015 05:58:21 GMT
       Content-Length:
       - '240'
       Content-Type:
@@ -1291,7 +1291,7 @@ http_interactions:
         <p>The document has moved <a href="http://www.w3.org/ns/oa.jsonld">here</a>.</p>
         </body></html>
     http_version: 
-  recorded_at: Fri, 31 Jul 2015 20:47:55 GMT
+  recorded_at: Fri, 31 Jul 2015 23:58:21 GMT
 - request:
     method: get
     uri: http://www.w3.org/ns/oa.jsonld
@@ -1313,7 +1313,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Fri, 31 Jul 2015 20:47:55 GMT
+      - Fri, 31 Jul 2015 23:58:21 GMT
       Server:
       - Apache/2
       Last-Modified:
@@ -1327,7 +1327,7 @@ http_interactions:
       Cache-Control:
       - max-age=21600
       Expires:
-      - Sat, 01 Aug 2015 02:47:55 GMT
+      - Sat, 01 Aug 2015 05:58:21 GMT
       P3p:
       - policyref="http://www.w3.org/2014/08/p3p.xml"
       Access-Control-Allow-Origin:
@@ -2445,5 +2445,5 @@ http_interactions:
 
 
     http_version: 
-  recorded_at: Fri, 31 Jul 2015 20:47:56 GMT
+  recorded_at: Fri, 31 Jul 2015 23:58:21 GMT
 recorded_with: VCR 2.9.3
