--- a/spec/fixtures/vcr_cassettes/TriannonClientREAD/GET/annotation_by_ID/using_custom_content_type/cannot_get_an_open_annotation_by_ID_with_content_type_text/tab-separated-values_.yml
+++ b/spec/fixtures/vcr_cassettes/TriannonClientREAD/GET/annotation_by_ID/using_custom_content_type/cannot_get_an_open_annotation_by_ID_with_content_type_text/tab-separated-values_.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http://localhost:3000/annotations/bar/%2F72%2F72%2F7b%2F30%2F72727b30-91eb-4eef-b936-97dc05cb5893
+    uri: http://localhost:3000/annotations/bar/%2F48%2F84%2F25%2F42%2F48842542-1dec-404f-8381-aac4dbf8f3e1
     body:
       encoding: US-ASCII
       string: ''
@@ -25,13 +25,13 @@ http_interactions:
       Content-Length:
       - '99520'
       X-Request-Id:
-      - 1ee80001-7047-4641-9a9c-f1b04fc5dee4
+      - d4976473-3a0c-4ad5-ac5b-4e27fd31a2bd
       X-Runtime:
-      - '0.233728'
+      - '0.219841'
       Server:
       - WEBrick/1.3.1 (Ruby/2.2.2/2015-04-13)
       Date:
-      - Fri, 31 Jul 2015 20:48:12 GMT
+      - Fri, 31 Jul 2015 23:58:36 GMT
       Connection:
       - Keep-Alive
     body:
@@ -1215,7 +1215,7 @@ http_interactions:
         = el.className.replace(\" hidden\", \"\");\n          currentSource = el;\n
         \       }\n      }\n    }\n  </script>\n</div>\n\n  \n\n<h2 style=\"margin-top:
         30px\">Request</h2>\n<p><b>Parameters</b>:</p> <pre>{&quot;anno_root&quot;=&gt;&quot;bar&quot;,\n
-        &quot;id&quot;=&gt;&quot;/72/72/7b/30/72727b30-91eb-4eef-b936-97dc05cb5893&quot;}</pre>\n\n<div
+        &quot;id&quot;=&gt;&quot;/48/84/25/42/48842542-1dec-404f-8381-aac4dbf8f3e1&quot;}</pre>\n\n<div
         class=\"details\">\n  <div class=\"summary\"><a href=\"#\" onclick=\"return
         toggleSessionDump()\">Toggle session dump</a></div>\n  <div id=\"session_dump\"
         style=\"display:none\"><pre></pre></div>\n</div>\n\n<div class=\"details\">\n
@@ -1227,5 +1227,5 @@ http_interactions:
         &quot;HTTP/1.1&quot;</pre></div>\n</div>\n\n<h2 style=\"margin-top: 30px\">Response</h2>\n<p><b>Headers</b>:</p>
         <pre>None</pre>\n\n</div>\n\n\n</body>\n</html>\n"
     http_version: 
-  recorded_at: Fri, 31 Jul 2015 20:48:12 GMT
+  recorded_at: Fri, 31 Jul 2015 23:58:36 GMT
 recorded_with: VCR 2.9.3
